<resources>
    <string name="app_name">Evelyn AND Michael</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_activity_navegation">NavegationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="msj_error_clienrest">Error al conusltar servicio web, posibles problemas de conexión, intente más adelante.</string>
    <string name="msj_error_clienrest_formato">Error en interpretación de resultado, posibles problemas con el servidor.</string>
    <string name="msj_confirmacion">Mensaje de confirmación</string>
    <string name="msj_pregunta_salir">¿Esta seguro que desea salir de la aplicación?</string>
    <string name="lbl_aceptar">Aceptar</string>
    <string name="title_activity_button_navigation">ButtonNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="porfavor_escriba_el_mensaje">Porfavor escriba el mensaje</string>

    <string name="hint_name">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Registrar</string>
    <string name="error_message_name">Enter Full Nombre</string>
    <string name="error_message_apellido">Enter Full Apellido</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>

</resources>
